Bug 1094442 - Part 1: Refactor how tile w/h is queried r=kats